force-app/main/default/objects/Warranty_Agreement__c/Warranty_Agreement__c.object-meta.xml
<CustomObject>
    <label>Warranty Agreement</label>
    <nameField>
        <displayFormat>WAR-{00000}</displayFormat>
        <label>Warranty Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warranty Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>