force-app/main/default/objects/Warranty_Agreement__c/fields/Claim_Processing_Details__c.field-meta.xml
<CustomField>
    <fullName>Claim_Processing_Details__c</fullName>
    <label>Claim Processing Details</label>
    <type>TextArea</type>
</CustomField>