force-app/main/default/objects/Warranty_Agreement__c/fields/Handling_Details__c.field-meta.xml
<CustomField>
    <fullName>Handling_Details__c</fullName>
    <label>Handling Details</label>
    <type>TextArea</type>
</CustomField>