force-app/main/default/objects/Warranty_Agreement__c/fields/Labor_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Labor_Coverage__c</fullName>
    <label>Labor Coverage</label>
    <type>TextArea</type>
</CustomField>