force-app/main/default/objects/Warranty_Agreement__c/fields/Parchment_Date__c.field-meta.xml
<CustomField>
    <fullName>Parchment_Date__c</fullName>
    <label>Parchment Date</label>
    <type>Date</type>
</CustomField>