force-app/main/default/objects/Warranty_Agreement__c/fields/Products_Covered__c.field-meta.xml
<CustomField>
    <fullName>Products_Covered__c</fullName>
    <inlineHelpText>What are the products covered by the warranty parchment you are attaching.</inlineHelpText>
    <label>Products Covered</label>
    <type>TextArea</type>
</CustomField>