force-app/main/default/objects/Warranty_Agreement__c/fields/RGAs_Required__c.field-meta.xml
<CustomField>
    <fullName>RGAs_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RGAs Required</label>
    <type>Checkbox</type>
</CustomField>