force-app/main/default/objects/Warranty_Agreement__c/fields/Supplier_Shipping_Account_Details__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Shipping_Account_Details__c</fullName>
    <label>Supplier Shipping Account Details</label>
    <type>TextArea</type>
</CustomField>