force-app/main/default/objects/Warranty_Agreement__c/fields/Warranty_Period__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Period__c</fullName>
    <label>Warranty Period</label>
    <type>TextArea</type>
</CustomField>