force-app/main/default/objects/Warranty_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Products_Covered__c</columns>
    <columns>Parchment_Date__c</columns>
    <columns>Warranty_Period__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>